--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
 <!-- JQUERY -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="script.js"></script>
 </head>
-<body>
-
+<body onload="checkCookie()">
 <h1>This is a Heading</h1>
 <button id="mybtn">This is a Button.</button>
 <script src="script.js"></script>
